// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introspect should be possible to introspect all of those files at the same time 1`] = `
[
  DomainObjectMetadata {
    "decorations": {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainLiteral",
    "name": "Address",
    "properties": {
      "city": DomainObjectPropertyMetadata {
        "name": "city",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "name": "postal",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "name": "state",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "name": "street",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "name": "suite",
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": {
      "unique": [
        "vin",
      ],
      "updatable": [
        "milage",
      ],
    },
    "extends": "DomainEntity",
    "name": "DeliveryVan",
    "properties": {
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "make": DomainObjectPropertyMetadata {
        "name": "make",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "milage": DomainObjectPropertyMetadata {
        "name": "milage",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "model": DomainObjectPropertyMetadata {
        "name": "model",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "vin": DomainObjectPropertyMetadata {
        "name": "vin",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "year": DomainObjectPropertyMetadata {
        "name": "year",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": {
      "unique": [
        "trackingNumber",
      ],
      "updatable": null,
    },
    "extends": "DomainEntity",
    "name": "Package",
    "properties": {
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "trackingNumber": DomainObjectPropertyMetadata {
        "name": "trackingNumber",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "weight": DomainObjectPropertyMetadata {
        "name": "weight",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": {
      "unique": [],
      "updatable": [
        "status",
        "contactInfo",
      ],
    },
    "extends": "DomainEntity",
    "name": "Delivery",
    "properties": {
      "contactInfo": DomainObjectPropertyMetadata {
        "name": "contactInfo",
        "nullable": false,
        "of": {
          "nullable": false,
          "required": true,
          "type": "STRING",
        },
        "required": true,
        "type": "ARRAY",
      },
      "destination": DomainObjectPropertyMetadata {
        "name": "destination",
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainLiteral",
          "name": "Address",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "packages": DomainObjectPropertyMetadata {
        "name": "packages",
        "nullable": false,
        "of": {
          "nullable": false,
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainEntity",
            "name": "Package",
          },
          "required": true,
          "type": "REFERENCE",
        },
        "required": true,
        "type": "ARRAY",
      },
      "status": DomainObjectPropertyMetadata {
        "name": "status",
        "nullable": false,
        "of": [
          "SCHEDULED",
          "IN_PROGRESS",
          "DELIVERED",
          "FAILED",
          "CANCELED",
        ],
        "required": true,
        "type": "ENUM",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "van": DomainObjectPropertyMetadata {
        "name": "van",
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainEntity",
          "name": "DeliveryVan",
        },
        "required": true,
        "type": "REFERENCE",
      },
    },
  },
]
`;

exports[`introspect should be possible to introspect the Address file 1`] = `
[
  DomainObjectMetadata {
    "decorations": {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainLiteral",
    "name": "Address",
    "properties": {
      "city": DomainObjectPropertyMetadata {
        "name": "city",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "name": "postal",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "name": "state",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "name": "street",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "name": "suite",
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`introspect should be possible to introspect the Delivery file 1`] = `
[
  DomainObjectMetadata {
    "decorations": {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainLiteral",
    "name": "Address",
    "properties": {
      "city": DomainObjectPropertyMetadata {
        "name": "city",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "name": "postal",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "name": "state",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "name": "street",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "name": "suite",
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": {
      "unique": [
        "vin",
      ],
      "updatable": [
        "milage",
      ],
    },
    "extends": "DomainEntity",
    "name": "DeliveryVan",
    "properties": {
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "make": DomainObjectPropertyMetadata {
        "name": "make",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "milage": DomainObjectPropertyMetadata {
        "name": "milage",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "model": DomainObjectPropertyMetadata {
        "name": "model",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "vin": DomainObjectPropertyMetadata {
        "name": "vin",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "year": DomainObjectPropertyMetadata {
        "name": "year",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": {
      "unique": [
        "trackingNumber",
      ],
      "updatable": null,
    },
    "extends": "DomainEntity",
    "name": "Package",
    "properties": {
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "trackingNumber": DomainObjectPropertyMetadata {
        "name": "trackingNumber",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "weight": DomainObjectPropertyMetadata {
        "name": "weight",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": {
      "unique": [],
      "updatable": [
        "status",
        "contactInfo",
      ],
    },
    "extends": "DomainEntity",
    "name": "Delivery",
    "properties": {
      "contactInfo": DomainObjectPropertyMetadata {
        "name": "contactInfo",
        "nullable": false,
        "of": {
          "nullable": false,
          "required": true,
          "type": "STRING",
        },
        "required": true,
        "type": "ARRAY",
      },
      "destination": DomainObjectPropertyMetadata {
        "name": "destination",
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainLiteral",
          "name": "Address",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "packages": DomainObjectPropertyMetadata {
        "name": "packages",
        "nullable": false,
        "of": {
          "nullable": false,
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainEntity",
            "name": "Package",
          },
          "required": true,
          "type": "REFERENCE",
        },
        "required": true,
        "type": "ARRAY",
      },
      "status": DomainObjectPropertyMetadata {
        "name": "status",
        "nullable": false,
        "of": [
          "SCHEDULED",
          "IN_PROGRESS",
          "DELIVERED",
          "FAILED",
          "CANCELED",
        ],
        "required": true,
        "type": "ENUM",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "van": DomainObjectPropertyMetadata {
        "name": "van",
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainEntity",
          "name": "DeliveryVan",
        },
        "required": true,
        "type": "REFERENCE",
      },
    },
  },
]
`;

exports[`introspect should be possible to introspect the DeliveryVan file 1`] = `
[
  DomainObjectMetadata {
    "decorations": {
      "unique": [
        "vin",
      ],
      "updatable": [
        "milage",
      ],
    },
    "extends": "DomainEntity",
    "name": "DeliveryVan",
    "properties": {
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "make": DomainObjectPropertyMetadata {
        "name": "make",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "milage": DomainObjectPropertyMetadata {
        "name": "milage",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "model": DomainObjectPropertyMetadata {
        "name": "model",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "vin": DomainObjectPropertyMetadata {
        "name": "vin",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "year": DomainObjectPropertyMetadata {
        "name": "year",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
]
`;
